--- a/.github/workflows/plantuml.yml
+++ b/.github/workflows/plantuml.yml
@@ -1,6 +1,8 @@
 name: Generate PlantUML Diagrams
 on:
   push:
+    branches-ignore:
+      - master
     paths:
       - 'docs/diagrams/**.puml'
       - '!docs/diagrams/tracing/**.puml'
